    instance-level logging under "sqlalchemy.<module>.<classname>.0x..<00-FF>".
    Test suite includes "--log-info" and "--log-debug" arguments
    which work independently of --verbose/--quiet.  Logging added
    to orm to allow tracking of mapper configurations, row iteration.
- Specific Databases:
    - SQLite:
    - sqlite boolean datatype converts False/True to 0/1 by default
    - MS-SQL: 
    - fixes bug 261 (table reflection broken for MS-SQL case-sensitive 
    databases)
    - can now specify port for pymssql
    - introduces new "auto_identity_insert" option for auto-switching 
    between "SET IDENTITY_INSERT" mode when values specified for IDENTITY columns 
    - now supports multi-column foreign keys
    - fix to reflecting date/datetime columns
    - NCHAR and NVARCHAR type support added
    - Oracle:
    - Oracle has experimental support for cx_Oracle.TIMESTAMP, which requires
    a setinputsizes() call on the cursor that is now enabled via the
    'auto_setinputsizes' flag to the oracle dialect.  
    - Firebird:
    - aliases do not use "AS"
    - correctly raises NoSuchTableError when reflecting non-existent table
- Schema:
    - added autoincrement=True to Column; will disable schema generation
    of SERIAL/AUTO_INCREMENT/identity seq for postgres/mysql/mssql if
    explicitly set to False
    - TypeEngine objects now have methods to deal with copying and comparing
    values of their specific type.  Currently used by the ORM, see below.
    - fixed condition that occurred during reflection when a primary key
    column was explciitly overridden, where the PrimaryKeyConstraint would
    get both the reflected and the programmatic column doubled up
    - the "foreign_key" attribute on Column and ColumnElement in general
    is deprecated, in favor of the "foreign_keys" list/set-based attribute,
    which takes into account multiple foreign keys on one column. 
    "foreign_key" will return the first element in the "foreign_keys" list/set